fixed center align

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ html, body {
 #work {
   background-color: #494949;
   padding: 120px 0;
-  margin-top: -20px;
+  margin-top: -25px;
 }
 
 .imgwrap {
@@ -369,10 +369,11 @@ html, body {
   padding: 0;
 }
 
-#about .skills {
+#aboutme .skills {
   padding-top: 30px;
 }
-#about .skills p {
+
+#aboutme .skills p {
   font-size: 1.2em;
   line-height: 0.9;
   font-size: 0.9em;
@@ -472,6 +473,11 @@ html, body {
 
   #aboutme {
     margin: 0;
+  }
+
+  #aboutme .skills{
+    padding: 30px;
+    position:sticky;
   }
   
   #photo {
